--- a/appsscript.json
+++ b/appsscript.json
@@ -1,5 +1,10 @@
 {
   "timeZone": "Europe/Kyiv",
   "exceptionLogging": "STACKDRIVER",
-  "runtimeVersion": "V8"
+  "runtimeVersion": "V8",
+  "oauthScopes": [
+  "https://www.googleapis.com/auth/spreadsheets",
+  "https://www.googleapis.com/auth/script.external_request",
+  "https://www.googleapis.com/auth/admin.directory.user.readonly"
+]
 }
